@@ -101,7 +101,7 @@ class ModulesModelModules extends JModelList
 			$this->getState(
 				'list.select',
 				'a.id, a.title, a.position, a.module, ' .
-				'a.checked_out, a.checked_out_time, a.published, a.access, a.ordering'
+				'a.checked_out, a.checked_out_time, a.published, a.access, a.ordering, a.language'
 			)
 		);
 		$query->from('`#__modules` AS a');
