@@ -27,6 +27,7 @@ JCONFIG_PERMISSIONS_DESC=Default permissions used for all content in this compon
 JALLOW=Allow
 JALLOWED=Allowed
 JALLOW_INHERITED=Allow (Inherited)
+JDEFAULT=Default
 JDENY=Deny
 JDENIED=Denied
 JDENY_INHERITED=Deny (Inherited)
@@ -151,6 +152,7 @@ JOPTION_HIDE=Hide
 JOPTION_SHOW=Show
 JOPTION_REQUIRED=Required
 JOPTION_OPTIONAL=Optional
+JOPTION_DEFAULT_LANGUAGE=- Default -
 
 JGRID_MOVE_DOWN=Move Down
 JGRID_MOVE_UP=Move Up
